--- a/plagiat_ed_BD.html
+++ b/plagiat_ed_BD.html
@@ -73,8 +73,9 @@
 	
 			<caption><span><h3>Bandes dessinées parues et en libre accès.
 				</h3>Lecture en ligne (cliquer sur l'image ou sur le lien pdf).
-			<br>Attention, nous vous conseillons de privilégier la lecture sur pdf. Car bien qu'ils soient lourds, ceux-ci ne buggent pas, 
-				contrairement aux images qui peuvent ne pas bien se charger sur le site.
+			<br>Attention, nous vous conseillons de privilégier la lecture sur pdf. 
+				<br>Car bien qu'ils soient lourds, ceux-ci ne buggent pas, 
+				<br>contrairement aux images qui peuvent ne pas bien se charger sur le site.
 
 			<br>Seule la commande de livres imprimés est payante (Boutique).<span></caption>    
 				
