--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -268,7 +268,7 @@
   <div class="col-3 col-s-12">
     <div class="aside">
       <a id="affiche" rel="catalogue/histoire">
-				<img src="image_site/affiche120.jpg" alt="affiche120corps" width="300" height="auto" />
+				<img src="image_site/affiche 3024.jpg" alt="affiche 3024.jpgs" width="300" height="auto" />
 			</a>
     </div>
   </div>
