--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -146,9 +146,9 @@
 					<u>Véridique Rapport sur les dernières chances de sauver le capitalisme en Italie(.pdf)</u></a></i></span></p>
 				<p><span>VALLES, Jules<br>
 				<a id="L'enfant" rel="litteratureaudio" href="https://drive.google.com/uc?id=1brgRVNZp-vQ68C1K0bbm9EHzmsZ-prvf">
-					<u><i>L'enfant</i></u></span></a>
+					<u><i>L'enfant</i></u></span></a><br>
 				<a id="Le bâchelierr" rel="litteratureaudio" href="https://drive.google.com/uc?id=1Gyi3QB9q_4OIa-qljaelsm-iW6AtpCAz">
-					<u><i>Le bâchelier</i></u></span></a>					
+					<u><i>Le bâchelier</i></u></span></a><br>					
 				<a id="L'insurgér" rel="litteratureaudio" href="https://drive.google.com/uc?id=1HONeYjLEomkSo3XKTyMKIqk90lDzTuiO">
 					<u><i>L'insurgé</i></u></span></p></a>	
 				<p><span>VANEIGEM, Raoul
