--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -206,16 +206,18 @@
 				<p><span>LEAL, Luís Henrique et ZATTi, Caio<br>
 				<a id="fotograma" rel="imageillu" href="https://vimeo.com/146580693">
 					<u><i>Fotograma</i></u></p></a>
+					
 				<p><span>MARKER, Chris<br>
 				<a id="Chatsperchés" rel="Chatsperchés" href="https://www.youtube.com/watch?v=7fJbO8wOc84">
 					<u><i>Chats perchés</i></u><br></a>
+					
 				<a id="Cuba si" rel="Cuba si" href="https://www.youtube.com/watch?v=gNdsK5WEh_M">
 					<u><i>Cuba si</i></u><br></a>
 				<a id="La Jetée" rel="La Jetée" href="https://www.youtube.com/watch?v=fU99W-ZrIHQ">
 					<u><i>La Jetée</i></u><br></a>
 				<a id="markerairrouge" rel="markerairrouge" href="https://www.youtube.com/watch?v=3EopPujn9u4">
 					<u><i>Le fond de l air est rouge, Part I (les mains fragiles)</i></u><br></a>
-				<a id="markerairrouge" rel="markerairrouge" href="https://www.dailymotion.com/video/x11ef4t">
+				<a id="markerairrouge2" rel="markerairrouge2" href="https://www.dailymotion.com/video/x11ef4t">
 					<u><i>Le fond de l air est rouge, Part II (les mains coupées)</i></u><br></a>
 				<a id="Le joli mai" rel="Le joli mai" href="https://www.youtube.com/watch?v=aRPXsnSmnvc">
 					<u><i>Le joli mai</i></u><br></a>
