--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -215,15 +215,19 @@
 					<u><i>Cuba si</i></u><br></a>
 				<a id="La Jetée" rel="La Jetée" href="https://www.youtube.com/watch?v=fU99W-ZrIHQ">
 					<u><i>La Jetée</i></u><br></a>
-				<a id="markerairrouge" rel="markerairrouge" href="https://www.youtube.com/watch?v=3EopPujn9u4">
-					<u><i>Le fond de l air est rouge, Part I (les mains fragiles)</i></u><br></a>
+				<a id="markerairrouge" rel="markerairrouge" href="https://www.dailymotion.com/video/x11eekv">
+					<u><i>Le fond de l air est rouge, Part I Les mains fragiles, chapitre 1, Du Vietnam à la mort du Che</i></u><br></a>
+				<a id="markerairrouge" rel="markerairrouge" href="https://www.dailymotion.com/video/x11eewv">
+					<u><i>Le fond de l air est rouge, Part I Les mains fragiles, chapitre 2, Mai 68 et tout ça</i></u><br></a>
 				<a id="markerairrouge2" rel="markerairrouge2" href="https://www.dailymotion.com/video/x11ef4t">
-					<u><i>Le fond de l air est rouge, Part II (les mains coupées)</i></u><br></a>
+					<u><i>Le fond de l air est rouge, Part II Les mains coupées, chapitre 3 Du printemps de Prague au Programme Commun</i></u><br></a>
+				<a id="markerairrouge2" rel="markerairrouge2" href="https://www.dailymotion.com/video/x11ef5n">
+					<u><i>Le fond de l air est rouge, Part II Les mains coupées, chapitre 4 Du Chili à quoi, au fait ?</i></u><br></a>
 				<a id="Le joli mai" rel="Le joli mai" href="https://www.youtube.com/watch?v=aRPXsnSmnvc">
 					<u><i>Le joli mai</i></u><br></a>
 				<a id="LES STATUES MEURENT" rel="Les statues meurent aussi" href="https://www.youtube.com/watch?v=F0y1ZTrql8U">
 					<u><i>Les statues meurent aussi</i></u><br></a>
-				<a id=" "Puisqu'on vous dit que c'est possible"" rel=" "Puisqu'on vous dit que c'est possible"" href="https://www.youtube.com/watch?v=c6-bn8tDrF0">
+				<a id= "Puisqu'on vous dit que c'est possible" rel= "Puisqu'on vous dit que c'est possible" href="https://www.youtube.com/watch?v=c6-bn8tDrF0">
 					<u><i> "Puisqu'on vous dit que c'est possible"</i></u><br></a>
 				<a id="Une Journée d'Andrei Arsenevitch Tarkovski" rel="Une Journée d'Andrei Arsenevitch Tarkovski" href="https://www.youtube.com/watch?v=8FoVj2IbMLs">
 					<u><i>Une Journée d'Andrei Arsenevitch Tarkovski</i></u></a></p>
