--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -197,6 +197,9 @@
 					<br><a id="surlepassagedequelques" rel="debord" href="https://www.youtube.com/watch?v=79yaIveDHC8">
 					Sur le passage de quelques personnes à travers une assez courte unité de temps</a>
 						</i></u><span></p>
+				<p><span>EISENSTEIN, Sergueï, 
+					<br><a id="Potemkine (1905)" rel="Potemkine (1905)" href="https://www.dailymotion.com/video/x1vrl65">
+					<u><i>Le Cuirassé Potemkine</i></u></span></p></a>
 				<p><span>FRANCE 2, Envoyé Spécial <br>
 					<a id="Je serai CRS" rel="1996" href="https://www.youtube.com/watch?v=JrHwWJ3a1kE">
 					<u><i>Je serai CRS (1996)</i></u></span></p></a>				
