--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -287,9 +287,15 @@
 				<p><span>MARINETTI, Filippo Tommaso
 					<a href="https://drive.google.com/uc?id=16ZqvcWQT-fLCnTjSWs0mRCiTxVesPTc_" title="futurismePdf">
 					<br><u><i> Manifeste du futurisme</i></u></span></p></a>
+				<p><span>MOREAS, Jean
+					<a href="https://drive.google.com/uc?id=1k_P73BccXfN8EsrYrZDeKd63f431hUb0" title="symbolismePdf">
+					<br><u><i> Manifeste du symbolisme</i></u></span></p></a>
 				<p><span>TZARA, Tristan<br>
 					<a href="https://drive.google.com/uc?id=1tZrd4oGZSzrqtRZu2so3EDrHS18B5hYc" title="dadaPdf">
 					<span><i><u>Manifeste dada (1918)(.pdf)</u></i></a></span></p>
+					<p><span>ART CONCRET, groupe et revue de 1930
+					<a href="https://drive.google.com/uc?id=1jI9oqpIwC4DgfmuDjZU_j4YC-znoFwpd" title="concretPdf">
+					<br><u><i> Manifeste d'art concret</i></u></span></p></a>
 				<p><span> </span></p>
 				<p><span> </span></p>
 			             
