--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -182,7 +182,7 @@
 					<p><span>APPEL, Kerry<br>
 					<a id="marcos97" rel="marcos" href="https://www.youtube.com/watch?v=O3pHmHbqqTk">
 					<u><i>Interview Marcos 1997</i></u></span></p></a>
-					<p><span>CONNER, Bruce<br>
+				<p><span>CONNER, Bruce<br>
 					<a id="A movie" rel="A movies" href="https://vimeo.com/96777553">
 					<u><i>A movie</i></u></span></p></a>
 				<p><span>DEBORD, Guy,
@@ -268,6 +268,14 @@
 				<p><span>ARTE<br>
 				<a id="crackopolis" rel="crackopolis" href="https://www.arteradio.com/serie/crackopolis/571">
 					<u><i>Crackopolis</i></u></span></p></a>
+				<a id="enlevement_l_italienne" rel="enlevement_l_italienne" href="https://www.arteradio.com/son/61673795/enlevement_l_italienne_1_7_voyage_en_italie">
+					<u><i>Enlèvement à l'italienne</i></u></span></p></a>
+				<a id="gardiens_de_la_paix" rel="gardiens_de_la_paix" href="https://www.arteradio.com/son/61664080/gardiens_de_la_paix">
+					<u><i>Gardiens de la paix</i></u></span></p></a>
+				<a id="la_prison_dans_la_peau" rel="la_prison_dans_la_peau" href="https://www.arteradio.com/son/61664797/la_prison_dans_la_peau">
+					<u><i>La prison dans la peau</i></u></span></p></a>
+				<a id="le_trafiquant" rel="le_trafiquant" href="https://www.arteradio.com/serie/le_trafiquant/2329">
+					<u><i>Le trafiquant</i></u></span></p></a>
 				<p><span>JAPPE, Anselm, 
 					<br><a id="anselm" rel="jappe" href="https://www.youtube.com/watch?v=zo5vdXkRPuc">
 					<u><i>Debord et la philosophie allemande</i></u></span></p></a>
@@ -290,6 +298,9 @@
 				<p><span>MOREAS, Jean
 					<a href="https://drive.google.com/uc?id=1k_P73BccXfN8EsrYrZDeKd63f431hUb0" title="symbolismePdf">
 					<br><u><i> Manifeste du symbolisme</i></u></span></p></a>
+				<p><span>NETCHAIEV, Sergueï
+					<br><i><a id="Netchaiev-catechisme" rel="Netchaiev-catechisme" href="http://kropot.free.fr/Netchaiev-catechismeR.htm">
+					<u>catéchisme du révolutionnaire </i></u><span></p></a>	
 				<p><span>TZARA, Tristan<br>
 					<a href="https://drive.google.com/uc?id=1tZrd4oGZSzrqtRZu2so3EDrHS18B5hYc" title="dadaPdf">
 					<span><i><u>Manifeste dada (1918)(.pdf)</u></i></a></span></p>
