--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -165,7 +165,7 @@
 					<u>Sur la commune,<br>(et gravure de la commune) (.pdf)</i></u><span></p></a>
 				<p><span>VELOCE 
 					<br><i><a href="https://drive.google.com/uc?id=1XIAAKMyvNm8c0daQTgigb7OyXRwwanmv" title="La civilisation du jeuPdf">
-					<p><span><u>La civilisation du jeu(.pdf)</u></a>
+					<span><u>La civilisation du jeu(.pdf)</u></a>
 					<br><a title="cigit" href="http://www.lisez-veloce.fr/tracts-2019/ci-git-la-critique/">
 					<u>Ci-gît la critique</u></a>
 					<br><a title="orage" href="http://www.lisez-veloce.fr/tracts-2019/apres-lorage/">
@@ -267,13 +267,13 @@
 				<p><span><h3><br>Audios</h3><span></p>
 				<p><span>ARTE<br>
 				<a id="crackopolis" rel="crackopolis" href="https://www.arteradio.com/serie/crackopolis/571">
-					<u><i>Crackopolis</i></u></span></p></a>
+					<u><i>Crackopolis</i></u></span></a>
 				<a id="enlevement_l_italienne" rel="enlevement_l_italienne" href="https://www.arteradio.com/son/61673795/enlevement_l_italienne_1_7_voyage_en_italie">
-					<u><i>Enlèvement à l'italienne</i></u></span></p></a>
+					<u><i>Enlèvement à l'italienne</i></u></span></a>
 				<a id="gardiens_de_la_paix" rel="gardiens_de_la_paix" href="https://www.arteradio.com/son/61664080/gardiens_de_la_paix">
-					<u><i>Gardiens de la paix</i></u></span></p></a>
+					<u><i>Gardiens de la paix</i></u></span></a>
 				<a id="la_prison_dans_la_peau" rel="la_prison_dans_la_peau" href="https://www.arteradio.com/son/61664797/la_prison_dans_la_peau">
-					<u><i>La prison dans la peau</i></u></span></p></a>
+					<u><i>La prison dans la peau</i></u></span></a>
 				<a id="le_trafiquant" rel="le_trafiquant" href="https://www.arteradio.com/serie/le_trafiquant/2329">
 					<u><i>Le trafiquant</i></u></span></p></a>
 				<p><span>JAPPE, Anselm, 
