--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -268,13 +268,13 @@
 				<p><span>ARTE<br>
 				<a id="crackopolis" rel="crackopolis" href="https://www.arteradio.com/serie/crackopolis/571">
 					<u><i>Crackopolis</i></u></span></a>
-				<a id="enlevement_l_italienne" rel="enlevement_l_italienne" href="https://www.arteradio.com/son/61673795/enlevement_l_italienne_1_7_voyage_en_italie">
+				<br><a id="enlevement_l_italienne" rel="enlevement_l_italienne" href="https://www.arteradio.com/son/61673795/enlevement_l_italienne_1_7_voyage_en_italie">
 					<u><i>Enlèvement à l'italienne</i></u></span></a>
-				<a id="gardiens_de_la_paix" rel="gardiens_de_la_paix" href="https://www.arteradio.com/son/61664080/gardiens_de_la_paix">
+				<br><a id="gardiens_de_la_paix" rel="gardiens_de_la_paix" href="https://www.arteradio.com/son/61664080/gardiens_de_la_paix">
 					<u><i>Gardiens de la paix</i></u></span></a>
-				<a id="la_prison_dans_la_peau" rel="la_prison_dans_la_peau" href="https://www.arteradio.com/son/61664797/la_prison_dans_la_peau">
+				<br><a id="la_prison_dans_la_peau" rel="la_prison_dans_la_peau" href="https://www.arteradio.com/son/61664797/la_prison_dans_la_peau">
 					<u><i>La prison dans la peau</i></u></span></a>
-				<a id="le_trafiquant" rel="le_trafiquant" href="https://www.arteradio.com/serie/le_trafiquant/2329">
+				<br><a id="le_trafiquant" rel="le_trafiquant" href="https://www.arteradio.com/serie/le_trafiquant/2329">
 					<u><i>Le trafiquant</i></u></span></p></a>
 				<p><span>JAPPE, Anselm, 
 					<br><a id="anselm" rel="jappe" href="https://www.youtube.com/watch?v=zo5vdXkRPuc">
