--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -140,6 +140,9 @@
 				<p><span>KOTANYI, Attila
 					<br><i><a href="https://drive.google.com/uc?id=1-l4FIntu8dwtqf70ju-2NOxtjNClk3cv" title="communePdf">
 					<u>Sur la commune,<br>(et gravure de la commune) (.pdf)</i></u><span></p></a>
+				<p><span>LES LASCARS
+					<br><i><a href="http://www.alain.les-hurtig.org/pdf/lascars/lascars-du-lep-electonique.pdf" title="communelascars-du-lep-electoniquePdf">
+					<u>Vous ne pouvez rien faire contre nous, nous vous empêchons de vieillir(.pdf)</i></u><span></p></a>
 				<p><span>MARX, Karl
 					<br><a href="https://drive.google.com/uc?id=1i6x_DSKdEqMiWmqvAsEZeejQyVsxmmnB" title="citiquedroitPdf">
 					<i><u>Contribution à la critique de La philosophie du droit de Hegel(.pdf)</u></a>
@@ -209,11 +212,12 @@
 				<p><span>LEAL, Luís Henrique et ZATTi, Caio<br>
 				<a id="fotograma" rel="imageillu" href="https://vimeo.com/146580693">
 					<u><i>Fotograma</i></u></p></a>
-					
+				<p><span>LES LASCARS, 
+					<br><a id="Lascars" rel="Lascars" href="https://vimeo.com/13315840?embedded=true&source=vimeo_logo&owner=4261756">
+					<u><i>Les Lascars du LEP électronique (1986)</i></u></span></p></a>
 				<p><span>MARKER, Chris<br>
 				<a id="Chatsperchés" rel="Chatsperchés" href="https://www.youtube.com/watch?v=7fJbO8wOc84">
-					<u><i>Chats perchés</i></u><br></a>
-					
+					<u><i>Chats perchés</i></u><br></a>	
 				<a id="Cuba si" rel="Cuba si" href="https://www.youtube.com/watch?v=gNdsK5WEh_M">
 					<u><i>Cuba si</i></u><br></a>
 				<a id="La Jetée" rel="La Jetée" href="https://www.youtube.com/watch?v=fU99W-ZrIHQ">
