--- a/plagiat_ed_miscellanées.html
+++ b/plagiat_ed_miscellanées.html
@@ -120,7 +120,12 @@
 			
 	        </table>
   </div>
-
+<div class="col-3 col-s-12">
+    <div class="aside">
+      <a>
+				<img src="image_site/afficheHM.jpg" alt="affichesHegeletMarx" width="300" height="auto" id="affiche"/>
+			</a>
+    </div>
 
   </div>
 </div>
