--- a/plagiat_ed_corpus_commune_archives.html
+++ b/plagiat_ed_corpus_commune_archives.html
@@ -71,8 +71,10 @@
     <span><h4><br>Corpus de références
 										<br>-<br>La Commune de Paris (1871)</h4>
 						<p><b><br>Introduction</b></p><span>
-						<p><span><cite>«&#8239citation<br>
-</cite>auteur</i></p><br>
+						<p><span><cite>«&#8239;Je suis entre les mains de mes vainqueurs&#8239;: ils veulent ma tête, qu’ils la prennent.
+							Jamais je ne sauverai ma vie par la lâcheté&#8239;; Libre j’ai vécu, j’entends mourir de même. 
+							Je n’ajoute plus qu’un mot&#8239;: la fortune est capricieuse&#8239;; je confie à l’avenir le soin de ma mémoire et de ma vengeance&#8239;!<br>
+</cite>FERRÉ : Membre de la Commune de Paris</i></p><br>
 			
 						<p><span>(présentation)	Le corpus que nous introduisons ici...
               <br> En voici les grands axes</p>
@@ -216,14 +218,16 @@
 					     <u><i>La Montagne (du 2 avril 1871 au 25 avril 1871)</i></u><br></a>
 				       <a id="PèreDuchêne" rel="PèreDuchêne" href="https://archivesautonomies.org/spip.php?article1666">
 					     <u><i>Le Père Duchêne (du 7 mars 1871 au 22 mai 1871)</i></u><br></a>
-				       <a id="" rel="" href="">
-					     <u><i></i></u><br></a>
-               <a id="" rel="" href="">
-					     <u><i></i></u><br></a>
-				       <a id="" rel="" href="">
-					     <u><i></i></u><br></a>
-				       <a id="" rel="" href="">
-					     <u><i></i></u><br></a>
+				       <a id="Fouettard" rel="Fouettard" href="https://archivesautonomies.org/spip.php?article2116">
+					     <u><i>Le Père Fouettard</i></u><br></a>
+              			       <a id="Prolétaire" rel="Prolétaire" href="https://archivesautonomies.org/spip.php?article2157">
+					     <u><i>Le Prolétaire (du 10 mai 1871 au 24 mai 1871)</i></u><br></a>
+				       <a id="Salut" rel="Salut" href="https://archivesautonomies.org/spip.php?article4466">
+					     <u><i>Le Salut PublSalutic (du 16 mai 1871 au 23 mai 1871)</i></u><br></a>
+				       <a id="Sociale" rel="Sociale" href="https://archivesautonomies.org/spip.php?article3843">
+					     <u><i>La Sociale (du 31 mars au 17 mai 1871)</i></u><br></a>
+				       <a id="Tribun" rel="Tribun" href="https://archivesautonomies.org/spip.php?article1765">
+					     <u><i>Le Tribun du Peuple (du 17 mai 1871 au 24 mai 1871)</i></u><br></a>
                 
         <p><b><br>9&#8239;-&#8239;Les auteurs de la Communes<A NAME="9"></A> </b></p><span> 
                 <p><span>VALLES, Jules<br>
@@ -239,8 +243,8 @@
 					    <u>Sur la commune,<br>et gravure de la commune(.pdf)</i></u><span></p></a>
                 
         <p><b><br>11&#8239;-&#8239;Autres sites proposant un large pannel d'informations sur la Commune de 1871<A NAME="11"></A> </b></p><span>     
-				       <a id="" rel="" href="">
-					     <u><i></i></u><br></a>
+				       <a id="archivesautonomies" rel="archivesautonomies" href="https://archivesautonomies.org/">
+					     <u><i>Site du collectif Archives Autonomies - Fragments d'Histoire de la gauche radicale</i></u><br></a>
 				       <a id="" rel="" href="">
 					     <u><i></i></u><br></a>
 				       <a id="" rel="" href="">
