--- a/plagiat_ed_corpus.html
+++ b/plagiat_ed_corpus.html
@@ -91,17 +91,17 @@
 							<a href="https://drive.google.com/uc?id=1GnsxBfHCUde4dKGb2jeV2px4awQ0O93g" title="modernité artistique.Pdf">
 							<p><span><u>Modernité artistique, culture et histoire dans la théorie situationniste(.pdf)</u></a><span></p>
 			            </td>
-		            </tr>
-				    <tr>
+			    <tr>
 	                <td width="200" id="illu1937"><br>
-			                <a id="legende" rel="article" href="  .html">
-			                <img src="  .jpg" alt="  " width="200" height="auto" /></a>
+			                <a id="legende" rel="article" href="plagiat_ed_histoire_protestations-1937.html">
+			                <img src="image_site/1937couv.jpg" alt="1967" width="200" height="auto" /></a>
 			            </td>
-	                    <td width="325" id="Mouvement ouvrier">
-						<p><span><i><br>   </i><span></p>
-                            <p><span><br>   <span></p> 
-							<a href=" .pdf" title="Pdf">
-							<p><span><u><br>  </u></a><span></p>
+						
+	                    <td width="325" id="protestations">
+						<p><span><i><br>Protestation devant les libertaires du présent et du futur sur les capitulations de 1937</i><span></p>
+                            <p><span>Par un Incontrôlé de la Colonne de Fer<br> et préface des éditions plagiat<span></p> 
+							<a href="https://drive.google.com/uc?id=1j-9yHGbOKhoSxWFRQaBuO14JX7TpVnEB" title="Pdf">
+							<p><span><u>Protestation devant les libertaires du présent et du&#8239;futur&#8239;sur&#8239;les&#8239;capitulations&#8239;de&#8239;1937(.pdf)</u></a><span></p>
 			            </td>
 		            </tr>
 					
