--- a/plagiat_ed_corpus_commune_archives.html
+++ b/plagiat_ed_corpus_commune_archives.html
@@ -370,33 +370,24 @@ M. le Président demande à chacun d’eux ses nom, prénoms, domicile et profes
 					    <u>Sur la commune,<br>et gravure de la commune(.pdf)</i></u><span></a><br>
 		              <br><a href="https://drive.google.com/uc?id=1xY5yfVHIQJh2OBk9pwgp_e-rB57Et90S" title="cahiercommunePdf">
 					    <u>Sur la commune,(version d'origine en cahier.pdf)</i></u><span></a><br>		
-				Extrait :<i>" Il faut reprendre l’étude du mouvement ouvrier classique d’une manière désabusée, et 
+				Extrait&#8239;:<i>"&#8239;Il faut reprendre l’étude du mouvement ouvrier classique d’une manière désabusée, et 
 					d’abord désabusée quant à ses diverses sortes d’héritiers politiques ou pseudo-théoriques, car ils ne possèdent que l’héritage de son échec.
 					Les succès apparents de ce mouvement sont ses échecs fondamentaux (le réformisme ou l’installation au pouvoir d’une bureaucratie étatique) et ses échecs 
-					(la Commune ou la révolte des Asturies) sont jusqu’ici ses succès ouverts, pour nous et pour l’avenir. "</p></i><span>	
+					(la Commune ou la révolte des Asturies) sont jusqu’ici ses succès ouverts, pour nous et pour l’avenir.&#8239;"</p></i><span>	
 				<p><span>WATKINS,Peter,<br>	
-				<br><a href="https://drive.google.com/uc?id=1-l4FIntu8dwtqf70ju-2NOxtjNClk3cv" title="communeet gravurePdf">
+				<br><a id="WATKINSmovie" rel="WATKINSmovies" href="https://www.youtube.com/watch?v=zg4Q0xtcFlg">
 					    <u>La Commune (Paris, 1871), partie I</i></u><span></a><br>
-		              <br><a href="https://drive.google.com/uc?id=1xY5yfVHIQJh2OBk9pwgp_e-rB57Et90S" title="cahiercommunePdf">
+		              <br><a id="WATKINSmovie" rel="WATKINSmovies" href="https://www.youtube.com/watch?v=9xavjkBujJE">
 					    <u>La Commune (Paris, 1871), partie II</i></u><span></a><br>		
-				Extrait :<i>" Il faut reprendre l’étude du mouvement ouvrier classique d’une manière désabusée, et 
-					d’abord désabusée quant à ses diverses sortes d’héritiers politiques ou pseudo-théoriques, car ils ne possèdent que l’héritage de son échec.
-					Les succès apparents de ce mouvement sont ses échecs fondamentaux (le réformisme ou l’installation au pouvoir d’une bureaucratie étatique) et ses échecs 
-					(la Commune ou la révolte des Asturies) sont jusqu’ici ses succès ouverts, pour nous et pour l’avenir. "</p></i><span>		
+				Docu-fiction de 1999, synopsis&#8239;:<i>"&#8239;mars 1871, tandis qu'un journaliste de la Télévision Versaillaise diffuse une information lénifiante, 
+					tronquée, se crée une Télévision Communale, émanation du peuple de Paris insurgé... Dans un espace théâtralisé, plus de 200 participants 
+					(intermittents du spectacle, chômeurs, sans-papiers, provinciaux, montreuillois, simples citoyens, ...) interprètent, devant une caméra fluide travaillant en plans séquences, 
+					les personnages de La Commune pour nous raconter leurs propres interrogations sur les réformes sociales et politiques&#8239;"</p></i><span>		
 					
-				<h4><span>Détournements de l'IS</h4>
-					<a id="Ville" rel="corpus/Ville">
-				<img src="https://drive.google.com/uc?id=1RfbFx_Urd3G4AMbRwwz1_H1Xj4ipcpJx" alt="hdv1871" width="300" height="auto" />
-				<p><span><i>L'Hôtel de Ville</i>, 1871</p>
-				<a id="Hôtel" rel="corpus/Hôtel">
-				<img src="https://drive.google.com/uc?id=17ONcn-a2WpQ9ZzLonUtI_9bD2uSeX4ur" alt=""hdv1871" width="300" height="auto" />
-				<p><span><i>L'Hôtel de Ville</i>, 1871</p>
-				<a id="Légion" rel="corpus/Légion">
-				<img src="https://drive.google.com/uc?id=1g9ILvxAVCCyekWs3u87JcK9smFofKuy8" alt="Légion" width="300" height="auto" />
-				<p><span><i>La Légion d'Honneur</i>, 1871</p><br>
-				<a id="étoile" rel="corpus/étoile">
-				<img src="https://drive.google.com/uc?id=1cuwGA8IHIwC89SzVNP3adyIkCJ5ENWYZ" alt="étoile" width="300" height="auto" />
-				<p><span><i>Place de l'étoile</i>, 1871</p><br>	
+				<a id="WATKINSmovie" rel="WATKINSmovie">
+				<img src="https://drive.google.com/uc?id=1XY3kPDqfBAOhQSKhmVbFxdGltphYLzLs" alt=""WATKINS" width="300" height="auto" />
+				<p><span><i>La Commune (Paris, 1871)</i>, 1871</p>
+
                 
         <p><b><br>11&#8239;-&#8239;Autres sites proposant un large pannel d'informations sur la Commune de 1871<A NAME="11"></A> </b></p><span>     
 				       <a id="archivesautonomies" rel="archivesautonomies" href="https://archivesautonomies.org/">
