--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -245,16 +245,16 @@
 					<a id="Strip Tease" rel="Strip Tease" href="https://www.youtube.com/@StripTeaseTVFR/videos">
 					<u><i>185 vidéos de Strip Tease</i></u></span></p></a>
 	    				<p><span>WATKINS,Peter,<br>	
-				<br><a id="WATKINSbombe" rel="WATKINSbombe" href="https://www.dailymotion.com/video/x70fzr">
+				<a id="WATKINSbombe" rel="WATKINSbombe" href="https://www.dailymotion.com/video/x70fzr">
 					    <u>La Bombe, partie I</i></u><span></a><br>
-		              <br><a id="WATKINSbombe" rel="WATKINSbombe" href="https://www.dailymotion.com/video/x70g6q">
+		              <a id="WATKINSbombe" rel="WATKINSbombe" href="https://www.dailymotion.com/video/x70g6q">
 					    <u>La Bombe, partie III</i></u><span></a><br>
-		              <br><a id="WATKINSbombe" rel="WATKINSbombe" href="https://www.dailymotion.com/video/x70g6q">
+		             <a id="WATKINSbombe" rel="WATKINSbombe" href="https://www.dailymotion.com/video/x70g6q">
 					    <u>La Bombe, partie II</i></u><span></a><br>
-				<br><a id="WATKINSmovie" rel="WATKINSmovies" href="https://www.youtube.com/watch?v=zg4Q0xtcFlg">
+				<a id="WATKINSmovie" rel="WATKINSmovies" href="https://www.youtube.com/watch?v=zg4Q0xtcFlg">
 					    <u>La Commune (Paris, 1871), partie I</i></u><span></a><br>
-		              <br><a id="WATKINSmovie" rel="WATKINSmovies" href="https://www.youtube.com/watch?v=9xavjkBujJE">
-					    <u>La Commune (Paris, 1871), partie II</i></u><span></a><br>
+		              <a id="WATKINSmovie" rel="WATKINSmovies" href="https://www.youtube.com/watch?v=9xavjkBujJE">
+					    <u>La Commune (Paris, 1871), partie II</i></u><span></a></p>
 															  
 					 
 			           </td>
