--- a/plagiat_ed_corpus_commune_archives.html
+++ b/plagiat_ed_corpus_commune_archives.html
@@ -96,7 +96,7 @@
 
 							
         <p><b><br>1&#8239;-&#8239;Déclaration officielle de la Commune de 1871<A NAME="1"></A> </b> 	
-              <a href="https://drive.google.com/uc?id=1C80HXQJGTYgF0DWspnYSAllPjzzJgl2U" title="déclarationofficiellePdf">
+              <a href="" title="déclarationofficiellePdf">
 							<p><span><u>Déclaration officielle de la Commune de 1871(.pdf)</u></a></p><span>
 		      <p><span>LES DÉCLARATIONS OFFICIELLES DE LA COMMUNE<br>
 Dans le conflit douloureux et terrible, qui impose une fois encore à Paris les horreurs du siège et du bombardement, qui fait couler le sang français, qui fait périr nos frères, nos femmes, nos enfants écrasés sous les obus et la mitraille, 
@@ -261,7 +261,7 @@ dans quel sens nous sommes révolutionnaires. &#8239;»<br>
         <p><b><br>5&#8239;-&#8239;Déclaration de la minorité de la Commune<A NAME="5"></A> </b></p><span> 
               <a href="https://drive.google.com/uc?id=1n3pkcs1zI3gssx4veQYudKG1XNLU2xvu" title="déclarationminoritéPdf">
 							<p><span><u>Déclaration de la minorité de la Commune(.pdf)</u></a></p><span>
-		      <p><span> DÉCLARATION<p><span> <br>
+		      <p><span> DÉCLARATION<p><span>
 <p><span> Par un vote spécial et précis, la Commune de Paris a abdiqué son pouvoir entre les mains d’une dictature, à laquelle elle a donné le nom de Comité de Salut public.<br>
 La majorité de la Commune s’est déclarée irresponsable par son vote, et a abandonné à ce Comité toutes les responsabilités de notre situation.<br>
 La minorité à laquelle nous appartenons affirme, au contraire, cette idée, que la Commune doit au mouvement révolutionnaire, 
@@ -308,13 +308,13 @@ M. le Président demande à chacun d’eux ses nom, prénoms, domicile et profes
                     <a href="https://drive.google.com/uc?id=1AP1s_cHqxU3vIYcU05jY7NjglEMcT4kk" title="coubetPdf">
 		<p><span><u>Courbet pendant la commune(.pdf)</u><span></p></a>                
           <p><span>Courbet est nommé directeur des Beaux-Arts le 4 septembre, fut maintenu à ce poste par le gouvernement de l’insurrection&#8239;; 
-		  élu à la Commune comme délégué à la mairie du 4 e arrondissement le 26 avril.<br>
+		  élu à la Commune comme délégué à la mairie du 4 e arrondissement le 26 avril.<br><br>
 <i>« Attendu que la colonne Vendôme est un monument dénué de toute valeur artistique, tendant à perpétuer par son expression les idées de guerre et de conquête qui étaient dans la dynastie impériale, mais que réprouve le sentiment d’une nation républicaine, 
 		  [le citoyen Courbet] émet le vœu que le gouvernement de la Défense nationale veuille bien l’autoriser à déboulonner cette colonne.&#8239;».</i></p>
 <p>Le projet fut repris par la Commune qui le vota le 12 avril 1871.</p>
 <p><i>« La Commune de Paris, considérant que la colonne impériale de la place Vendôme est un monument de barbarie, un symbole de force brute et de fausse gloire, une affirmation du militarisme, une négation du droit international,
 	une insulte permanente des vainqueurs aux vaincus, un attentat perpétuel à l’un des trois grands principes de la République française, la fraternité, décrète&#8239;:
-	article unique -&#8239;La colonne Vendôme sera démolie.&#8239;»</p> 
+	article unique -&#8239;La colonne Vendôme sera démolie.&#8239;»</i></p> 
 <p>La démolition du monument eut lieu le 8 mai suivant.</p>
 <p> Lors du procès des membres de la commune, Courbet est condamné à la peine de six mois de prison et 500 fr. d’amende.<br>
 <p>Le maréchal de Mac-Mahon, décide en mai 1873 de faire reconstruire la colonne Vendôme aux frais de Gustave Courbet (soit 323 091,68 francs selon le devis établi).</span></p>
@@ -373,16 +373,16 @@ M. le Président demande à chacun d’eux ses nom, prénoms, domicile et profes
 				<p><span>I.S.,<br>	
 				<br><a href="https://drive.google.com/uc?id=1-l4FIntu8dwtqf70ju-2NOxtjNClk3cv" title="communeet gravurePdf">
 					    <u>Sur la commune,<br>et gravure de la commune(.pdf)</i></u><span></a><br>
-		              <br><a href="https://drive.google.com/uc?id=1xY5yfVHIQJh2OBk9pwgp_e-rB57Et90S" title="cahiercommunePdf">
+		              <a href="https://drive.google.com/uc?id=1xY5yfVHIQJh2OBk9pwgp_e-rB57Et90S" title="cahiercommunePdf">
 					<u>Sur la commune,(version d'origine en cahier.pdf)</i></u><span></a></p>		
 				<p><span>Extrait&#8239;:<i>"&#8239;Il faut reprendre l’étude du mouvement ouvrier classique d’une manière désabusée, et 
 					d’abord désabusée quant à ses diverses sortes d’héritiers politiques ou pseudo-théoriques, car ils ne possèdent que l’héritage de son échec.
 					Les succès apparents de ce mouvement sont ses échecs fondamentaux (le réformisme ou l’installation au pouvoir d’une bureaucratie étatique) et ses échecs 
 					(la Commune ou la révolte des Asturies) sont jusqu’ici ses succès ouverts, pour nous et pour l’avenir.&#8239;"</p></i><span>	
 				<p><span>WATKINS,Peter,<br>	
-				<br><a id="WATKINSmovie" rel="WATKINSmovies" href="https://www.youtube.com/watch?v=zg4Q0xtcFlg">
+				<a id="WATKINSmovie" rel="WATKINSmovies" href="https://www.youtube.com/watch?v=zg4Q0xtcFlg">
 					    <u>La Commune (Paris, 1871), partie I</i></u><span></a><br>
-		              <br><a id="WATKINSmovie" rel="WATKINSmovies" href="https://www.youtube.com/watch?v=9xavjkBujJE">
+		              <a id="WATKINSmovie" rel="WATKINSmovies" href="https://www.youtube.com/watch?v=9xavjkBujJE">
 					    <u>La Commune (Paris, 1871), partie II</i></u><span></a><br></p>		
 				<p><span>Docu-fiction de 1999, synopsis&#8239;:<i>"&#8239;mars 1871, tandis qu'un journaliste de la Télévision Versaillaise diffuse une information lénifiante, 
 					tronquée, se crée une Télévision Communale, émanation du peuple de Paris insurgé... Dans un espace théâtralisé, plus de 200 participants 
