--- a/plagiat_ed_corpus_commune_archives.html
+++ b/plagiat_ed_corpus_commune_archives.html
@@ -179,20 +179,20 @@ dans quel sens nous sommes révolutionnaires. &#8239;»<br>
               						<p><span><u>Séance du 1817-04-01(.pdf)</u></a></p><span>
               <a href="https://drive.google.com/uc?id=1_TkVIZUonNd4opGCs5GZpsb9XRi2zfaF" title="procèsverbauxPdf">
 							<p><span><u>Séance du 1817-04-02(.pdf)</u></a></p><span>
+              <a href="https://drive.google.com/uc?id=19BmT-bXU_HOMgitJlq4f0ViXT1iphWZg" title="procèsverbauxPdf">
+							<p><span><u>Séance du 1817-04-03(.pdf)</u></a></p><span>
+              <a href="https://drive.google.com/uc?id=1a8kLC_P8uqMgTfNll30tVqQAZmzC396T" title="procèsverbauxPdf">
+							<p><span><u>Séance du 1817-04-04(.pdf)</u></a></p><span>
+              <a href="https://drive.google.com/uc?id=1HxMz2B7XLUUFeKkEHtgie2nfIazKsbwh" title="procèsverbauxPdf">
+							<p><span><u>Séance du 1817-04-05(.pdf)</u></a></p><span>
+              <a href="https://drive.google.com/uc?id=1umG5Auz0lW0LHW8pwwLgenzsJB6L69ff" title="procèsverbauxPdf">
+							<p><span><u>Séance du 1817-04-06(.pdf)</u></a></p><span>
+              <a href="https://drive.google.com/uc?id=1kpBoJE-2dp2-7aiqSht4WFTd3_yM5Z9P" title="procèsverbauxPdf">
+							<p><span><u>Séance du 1817-04-07(.pdf)</u></a></p><span>
+              <a href="https://drive.google.com/uc?id=1Fz419Z0HnkBGXv4ZPUhbABJavBI2xVND" title="procèsverbauxPdf">
+             						<p><span><u>Séance du 1817-04-08(.pdf)</u></a></p><span>
               <a href="https://drive.google.com/uc?id=" title="procèsverbauxPdf">
-							<p><span><u>Déclaration(.pdf)</u></a></p><span>
-              <a href="https://drive.google.com/uc?id=" title="procèsverbauxPdf">
-							<p><span><u>Déclaration(.pdf)</u></a></p><span>
-              <a href="https://drive.google.com/uc?id=" title="procèsverbauxPdf">
-							<p><span><u>Déclaration(.pdf)</u></a></p><span>
-              <a href="https://drive.google.com/uc?id=" title="procèsverbauxPdf">
-							<p><span><u>Déclaration(.pdf)</u></a></p><span>
-              <a href="https://drive.google.com/uc?id=" title="procèsverbauxPdf">
-							<p><span><u>Déclaration(.pdf)</u></a></p><span>
-              <a href="https://drive.google.com/uc?id=" title="procèsverbauxPdf">
-              <p><span><u>Déclaration(.pdf)</u></a></p><span>
-              <a href="https://drive.google.com/uc?id=" title="procèsverbauxPdf">
-							<p><span><u>Déclaration(.pdf)</u></a></p><span>
+							<p><span><u>Séance du 1817-04-09(.pdf)</u></a></p><span>
               <a href="https://drive.google.com/uc?id=" title="procèsverbauxPdf">
 							<p><span><u>Déclaration(.pdf)</u></a></p><span>
               <a href="https://drive.google.com/uc?id=" title="procèsverbauxPdf">
