--- a/plagiat_ed_corpus_commune_archives.html
+++ b/plagiat_ed_corpus_commune_archives.html
@@ -191,22 +191,22 @@ dans quel sens nous sommes révolutionnaires. &#8239;»<br>
 							<p><span><u>Séance du 1817-04-07(.pdf)</u></a></p><span>
               <a href="https://drive.google.com/uc?id=1Fz419Z0HnkBGXv4ZPUhbABJavBI2xVND" title="procèsverbauxPdf">
              						<p><span><u>Séance du 1817-04-08(.pdf)</u></a></p><span>
-              <a href="https://drive.google.com/uc?id=" title="procèsverbauxPdf">
+              <a href="https://drive.google.com/uc?id=1sJ_cj11yMvprzNWsJHKYPjSqMM7scGXl" title="procèsverbauxPdf">
 							<p><span><u>Séance du 1817-04-09(.pdf)</u></a></p><span>
-              <a href="https://drive.google.com/uc?id=" title="procèsverbauxPdf">
-							<p><span><u>Déclaration(.pdf)</u></a></p><span>
-              <a href="https://drive.google.com/uc?id=" title="procèsverbauxPdf">
-							<p><span><u>Déclaration(.pdf)</u></a></p><span>
-              <a href="https://drive.google.com/uc?id=" title="procèsverbauxPdf">
-							<p><span><u>Déclaration(.pdf)</u></a></p><span>
-              <a href="https://drive.google.com/uc?id=" title="procèsverbauxPdf">
-							<p><span><u>Déclaration(.pdf)</u></a></p><span>
-              <a href="https://drive.google.com/uc?id=" title="procèsverbauxPdf">
-							<p><span><u>Déclaration(.pdf)</u></a></p><span>
-              <a href="https://drive.google.com/uc?id=" title="procèsverbauxPdf">
-              <p><span><u>Déclaration(.pdf)</u></a></p><span>
-              <a href="https://drive.google.com/uc?id=" title="procèsverbauxPdf">
-							<p><span><u>Déclaration(.pdf)</u></a></p><span>
+              <a href="https://drive.google.com/uc?id=1chwtKAXhdCgUI0ibqo_dGLvAo0u1bnAz" title="procèsverbauxPdf">
+							<p><span><u>Séance du 1817-04-10(.pdf)</u></a></p><span>
+              <a href="https://drive.google.com/uc?id=1jeQqV60Hf2DYpT6ijr1JcU4vA8iS0iTt" title="procèsverbauxPdf">
+							<p><span><u>Séance du 1817-04-11(.pdf)</u></a></p><span>
+              <a href="https://drive.google.com/uc?id=1UPqbpIoTnmAKOQiuQ5dwNo5vTC3SbR3H" title="procèsverbauxPdf">
+							<p><span><u>Séance du 1817-04-12(.pdf)</u></a></p><span>
+              <a href="https://drive.google.com/uc?id=1mn7CoWbBA_TKMXHzgaDEYE7p5X_LTyUR" title="procèsverbauxPdf">
+							<p><span><u>Séance du 1817-04-13(.pdf)</u></a></p><span>
+              <a href="https://drive.google.com/uc?id=1s9q-9M4mKi2IghU_szTsx1Z3d4ymOsM8" title="procèsverbauxPdf">
+							<p><span><u>Séance du 1817-04-14(.pdf)</u></a></p><span>
+              <a href="https://drive.google.com/uc?id=1mj6f6sT9_lPXsP_MrWIiRF5AO9uY9z1w" title="procèsverbauxPdf">
+              						<p><span><u>Séance du 1817-04-15(.pdf)</u></a></p><span>
+              <a href="https://drive.google.com/uc?id=1EkRPbpIDDYfZ_VdomYwKmzQmlAUJdWRt" title="procèsverbauxPdf">
+							<p><span><u>Séance du 1817-04-16(.pdf)</u></a></p><span>
               <a href="https://drive.google.com/uc?id=" title="procèsverbauxPdf">
 							<p><span><u>Déclaration(.pdf)</u></a></p><span>
               <a href="https://drive.google.com/uc?id=" title="procèsverbauxPdf">
@@ -255,8 +255,10 @@ dans quel sens nous sommes révolutionnaires. &#8239;»<br>
 							<p><span><u>Déclaration(.pdf)</u></a></p><span>
                 
         <p><b><br>4&#8239;-&#8239;Les gravures de la Commune<A NAME="4"></A> </b></p><span> 
-              <a href="" title="déclarationofficiellePdf">
-							<p><span><u>Les gravures de la Commune(.pdf)</u></a></p><span>
+              <a href="https://drive.google.com/uc?id=1Qz3GS80z7T5xLEVji-hQkz1FIM7u7Ibr" title="gravurespressePdf">
+							<p><span><u>Les gravures de presse de la Commune(.pdf)</u></a></p><span>
+				<p><span>Le document des gravures de presse de la commune fait 99 mo en format paysage A5 avec des images de qualité pour le visionnage. Les gravures 
+						sont organisées dans l'ordre chronologique des évènements qu'elles relatent.								
                
         <p><b><br>5&#8239;-&#8239;Déclaration de la minorité de la Commune<A NAME="5"></A> </b></p><span> 
               <a href="https://drive.google.com/uc?id=1n3pkcs1zI3gssx4veQYudKG1XNLU2xvu" title="déclarationminoritéPdf">
