--- a/plagiat_ed_corpus_commune_archives.html
+++ b/plagiat_ed_corpus_commune_archives.html
@@ -86,9 +86,9 @@
                         <a font color="purple" href="#6" target="_self">6&#8239;-&#8239;Le procès des membres de la Commune</a><br>
                         <a font color="purple" href="#7" target="_self">7&#8239;-&#8239;Document sur l'activité et le procès de Courbet pendant la Commune de Paris</a><br>
                         <a font color="purple" href="#8" target="_self">8&#8239;-&#8239;Les journaux de la Commune</a><br>
-                        <a font color="purple" href="#9" target="_self">10&#8239;-&#8239;Les auteurs de la Commune (Jules Vallès trouver d'autres auteurs d'époque avec un accès à leurs ouvrages)</a><br>
-                        <a font color="purple" href="#10" target="_self">11&#8239;-&#8239;Productions réalisées sur la Commune de Paris (1871)</a><br>
-                        <a font color="purple" href="#11" target="_self">12&#8239;-&#8239;Autres sites proposant un large pannel d'information sur la Commune (trouver d'autres liens)</a><br>
+                        <a font color="purple" href="#9" target="_self">9&#8239;-&#8239;Les auteurs de la Commune (Jules Vallès trouver d'autres auteurs d'époque avec un accès à leurs ouvrages)</a><br>
+                        <a font color="purple" href="#10" target="_self">10&#8239;-&#8239;Productions réalisées sur la Commune de Paris (1871)</a><br>
+                        <a font color="purple" href="#11" target="_self">11&#8239;-&#8239;Autres sites proposant un large pannel d'information sur la Commune (trouver d'autres liens)</a><br>
         
 								<a id="carte" rel="carte">
 				<img src="https://drive.google.com/uc?id=1tM5GIsX2l50XmOXowpIMSUKtBclEngAE" alt="carte" width="300" height="auto" />
@@ -421,7 +421,7 @@ M. le Président demande à chacun d’eux ses nom, prénoms, domicile et profes
               			       <a id="Prolétaire" rel="Prolétaire" href="https://archivesautonomies.org/spip.php?article2157">
 					     <u><i>Le Prolétaire (du 10 mai 1871 au 24 mai 1871)</i></u><br></a>
 				       <a id="Salut" rel="Salut" href="https://archivesautonomies.org/spip.php?article4466">
-					     <u><i>Le Salut PublSalutic (du 16 mai 1871 au 23 mai 1871)</i></u><br></a>
+					     <u><i>Le Salut Public (du 16 mai 1871 au 23 mai 1871)</i></u><br></a>
 				       <a id="Sociale" rel="Sociale" href="https://archivesautonomies.org/spip.php?article3843">
 					     <u><i>La Sociale (du 31 mars au 17 mai 1871)</i></u><br></a>
 				       <a id="Tribun" rel="Tribun" href="https://archivesautonomies.org/spip.php?article1765">
