--- a/plagiat_ed_corpus_commune_archives.html
+++ b/plagiat_ed_corpus_commune_archives.html
@@ -151,10 +151,10 @@ dans quel sens nous sommes révolutionnaires.&#8239;»<br>
 			 
 				<h4>Deux affiches de la Commune du 19 mars 1871</h4>					
     				<a id="affiches" rel="corpus/affiches">
-				<img src="https://dri2google.com/uc?id=1-ZWaBohtaJSvYut9Y5nbNOGagwVZ-FQY" alt="affiches" width="300" height="auto" />
+				<img src="https://drive.google.com/uc?id=1-ZWaBohtaJSvYut9Y5nbNOGagwVZ-FQY" alt="affiches" width="300" height="auto" />
 				<p><span><i>Affiche du Comité centrale à l'adresse des Gardes Nationaux</i></p>
 				<a id="affiches2" rel="corpus/affiches2">
-				<img src="https://dri2google.com/uc?id=17OPM0in9pjGyMNJpwqJ2RnnqvDBxDbHI" alt="affiches2" width="300" height="auto" />
+				<img src="https://drive.google.com/uc?id=17OPM0in9pjGyMNJpwqJ2RnnqvDBxDbHI" alt="affiches2" width="300" height="auto" />
 				<p><span><i>Affiche du Comité centrale à l'adresse de la population</i></p>            									  
                 
         <p><b><br>2&#8239;-&#8239;Lexique des organes de la Commune<A NAME="2"></A> </b></p><span><br>  
