--- a/plagiat_ed_corpus_commune_archives.html
+++ b/plagiat_ed_corpus_commune_archives.html
@@ -199,13 +199,33 @@ Après la Semaine sanglante l'Assemblée est enfin «&#8239;libéré&#8239;» de
 				<h4>Garde nationale</h4>		
 				<p><span>
 		La Garde nationale de Paris fut créée pendant la Révolution de 1789. Elle était à l'origine une milice constituée de citoyens aisés qui payaient leurs impôts avec pour but de protéger contre les troubles qui accompagnèrent les débuts de la Révolution. 
-		 Cette milice participera à la prise de la Bastille du 14 juillet. Elle deviendra, par le décret du 12 juin 1790, la Garde nationale et elle est étendue à toutes les moyennes et grandes villes de france.
+		 Cette milice participera à la prise de la Bastille du 14 juillet. Elle deviendra, par le décret du 12 juin 1790, la Garde nationale. Elle est ainsi étendue à toutes les moyennes et grandes villes de france.
 La Garde nationale est plutôt de tendance modérée. 
-<br>À partir de 1791, elle est influencée par les clubs révolutionnaires sensibles aux revendications populaires. Elle est à la pointe de l’insurrection qui renverse la monarchie en 1792 et proclame la République.<br>
+<br>À partir de 1791, elle est influencée par les clubs révolutionnaires sensibles aux revendications populaires. Elle est à la pointe de l’insurrection qui renverse la monarchie en 1792 et proclame la République.
+<br>En 1799, la constitution de l'an VIII consacra l'existence de la garde nationale.
+Napoléon se méfiait de cette force bourgeoise, capable de maintenir l’ordre et de réprimer les émeutes aussi bien que de renverser le pouvoir établi.puis supprimée. Elle reparaît en 1805 sous le nom de « cohortes », avec lesquelles Napoléon forme des unités de combat pour la défense des frontières et des côtes.
+Ainsi pendant tout le règne de Napoléon, les gardes nationaux ont servi de réserve à l'armée et ont été mobilisés au gré des guerres de l'Empire.
+Une ordonnance du 16 juillet 1814 précisait que les gardes nationales ne devaient plus être que sédentaires. Leur déplacement en dehors de la
+ville ou du canton ne pouvait avoir lieu qu'exceptionnellement et serait déterminé par une loi spéciale.  Le but de l'institution était de réunir les hommes les plus intéressés par le maintien de l'ordre et les propriétaires territoriaux ou les industriels. 
+Seuls étaient admis au service ordinaire ceux qui pouvaient s'armer, s'habiller et s'équiper. Ils étaient peu nombreux. 
+<br>En 1815, lors du second retour de Louis XVIII, la garde nationale retrouvait son organisation de 1814. Elle représentait à peu près la seule force sur laquelle pouvaient compter les préfets. 
+Le 17 juillet 1816 fut proclamé une nouvelle ordonnance. La garde nationale restait une obligation pour tous les Français de 20 à 60 ans, imposés ou fils d'imposés.
+Le 29 avril 1827, le roi Charles X signait l'ordonnance de licenciement de la garde nationale parisienne. Là encore, la méfiance du pouvoir avait principalement motivé cette décision. Cette mesure fut malgré tout accueillie avec soulagement par des personnes qui n'avaient plus à faire leur service. Seuls les opposants au régime et les libéraux firent des protestations.
+Avec la Révolution de juillet 1830 au matin du 28 juillet 1830, des gardes nationaux reparurent spontanément en uniforme. Le 29 juillet, La Fayette, fut nommé à la tête de la garde nationale et rétablit la garde nationale parisienne. Le 31 juillet, il accueillit Louis-Philippe Ier à l'Hôtel de ville de Paris. 
+Louis-Philippe passa en revue la garde nationale de Paris, forte de 60 000 hommes. Mais rebelote, Louis-Philippe se méfia à son tour de la Garde Nationale, il pèsait le danger qu'il y avait, pour la monarchie, à dépendre d'une seule force pour assurer l'ordre public.
+Le 22 mars 1831 La garde nationale est chargée de défendre la monarchie constitutionnelle, elle devait faire maintenir l'obéissance aux lois, conserver ou rétablir la paix et l'ordre publics. 
+Comme auparavant, elle est théoriquement composée de tous les Français âgés de 20 à 60 ans, mais la loi distingue le service ordinaire et le service de réserve, mais là encore pour appartenir au services ordinaire il faut avoir les moyens de s'équiper et du temps. 
+Aussi ne trouve-t-on dans le service ordinaire, le seul qui soit effectif, que des hommes aisés&#8239;: ceci donne à la garde son caractère de milice bourgeoise, rempart des propriétaires contre le désordre.					
+Si elle participe parfois aux insurrections sociales et républicaines (Lyon, 1831), elle les réprime plus souvent (Paris, juin 1832 et juin 1834).<br>
+					
+					
+					<br>
 Après la déclaration de guerre à la Prusse fin juillet 1870, Napoléon III décide de doubler ses effectifs, mais le recrutement est lent parmi la population bourgeoise de la capitale.
-Fin septembre 1870, 250 bataillons sont formés et 300 000 hommes mobilisés. Une solde de trente sous par jour est accordée aux gardes nécessiteux, de plus en plus nombreux. 
+Fin septembre 1870, 250 bataillons sont formés et 300 000 hommes mobilisés. Chaque compagnie compte environ 125 hommes. Les bataillons sont formés de quatre compagnies de marche (ou de guerre) et de quatre compagnies sédentaires. 
+Les compagnies de guerre sont composées de volontaires et des gardes les plus jeunes ayant peu ou pas d’enfants. Les gardes des compagnies sédentaires restent à leur domicile. Un point de ralliement est fixé dans chaque quartier pour les besoins de leur service. 
+Les gardes nationaux des compagnies de marche et sédentaires sont donc très proches des populations qu’ils représentent. Une solde de trente sous par jour est accordée aux gardes nécessiteux, de plus en plus nombreux. 
 La Garde nationale devient ainsi une milice populaire et républicaine qui s’oppose de plus en plus au Gouvernement (dit) de Défense nationale.<br>
-C’est le peuple en armes.<br>
+C’est le peuple en armes. <br>
 La Garde nationale parisienne est composée de vingt légions - une par arrondissement. Chaque légion compte plusieurs bataillons. Et à partir du 2 septembre 1870, c'était les gardes nationaux qui organisaient eux-même l’élection de leurs officiers, sous-officiers et caporaux de compagnie. 
 Ensuite les officiers des compagnies de guerre élisaient leur chef de bataillon. 
 <br>Le gouvernement capitule devant les Prussiens et signe un armistice le 28 janvier 1871. 
