--- a/plagiat_ed_corpus_commune_archives.html
+++ b/plagiat_ed_corpus_commune_archives.html
@@ -472,7 +472,48 @@ M. le Président demande à chacun d’eux ses nom, prénoms, domicile et profes
 		<p><span><u>Courbet pendant la commune(.pdf)</u><span></p></a>                
           <p><span>Courbet est nommé directeur des Beaux-Arts le 4 septembre, fut maintenu à ce poste par le gouvernement de l’insurrection&#8239;; 
 		  élu à la Commune comme délégué à la mairie du 4 e arrondissement le 26 avril.<br><br>
-<i>« Attendu que la colonne Vendôme est un monument dénué de toute valeur artistique, tendant à perpétuer par son expression les idées de guerre et de conquête qui étaient dans la dynastie impériale, mais que réprouve le sentiment d’une nation républicaine, 
+		  Dans une lettre à ses parents il parle de la Commune :</p><span>
+	
+</cite><span>
+    Mes chers parents,<br>
+
+    Charenton, 30 avril 1871<br>
+
+    Me voici par le peuple de Paris introduit dans les affaires politiques jusqu’au cou. Président de la Fédération des artistes, 
+membre de la Commune, délégué à la mairie, délégué à l’Instruction publique: quatre fonctions les plus importantes de Paris. 
+Je me lève, je déjeune, et je siège et préside 12h par jour. Je commence à avoir la tête comme une pomme cuite. 
+Malgré tout ce tourment de tête et de compréhension d’affaires sociales auxquelles je n’étais pas habitué, je suis dans l’enchantement. 
+Paris est un vrai paradis! Point de police, point de sottise, point d’exaction d’aucune façon, point de dispute. 
+Paris va tout seul comme sur des roulettes. Il faudrait pouvoir rester toujours comme cela. En un mot, c’est un vrai ravissement. 
+Tous les corps d’Etat se sont établis en fédération et s’appartiennent. C’est moi qui ai donné le modèle avec les artistes de toutes sortes. 
+Les curés aussi sont à leurs pièces comme les autres, ainsi que les ouvriers, etc., etc., les notaires et les huissiers appartiennent à la Commune, et sont payés par elle comme les receveurs de l’enregistrement. Quant aux curés, s’ils veulent exercer à Paris (quoiqu’on n’y tienne pas), on leur louera des églises.
+
+<br>Dans nos moments de loisir, nous combattons les saligauds de Versailles[1], chacun y va à son tour. 
+Ils pourraient lutter dix ans comme ils le font sans pouvoir entrer dans nos murs, nous perdons très peu de monde et ils en perdent énormément&#8239;; 
+ça n’est pas malheureux, car tout ce qui est à Versailles, comme si on avait choisi, est le monde duquel il faut se débarrasser pour la tranquillité,
+c’est tous les mouchards à casse-tête, les soldats du pape, les lâches rendus à Sedan, et, comme hommes politiques, ce sont les hommes qui ont vendu la France, les Thiers[2], Jules Favre[3], Picard[4], et autres, scélérats, vieux domestiques des tyrans, vieilles poudrées des temps féodaux monarchiques, en un mot la plaie du monde entier.
+
+    Paris a renoncé à être la capitale de la France. La France ne voulait plus que Paris lui envoie ses préfets. La France doit être contente, elle est exaucée. Mais aussi Paris ne veut plus être conduit par la France ni par les votes des paysans qui votent pour le Père-Blicite[5]. C’est rationnel, du moment que la province envoie à 
+Paris les gens qui leur paraissent parmi eux les plus distingués pour l’instruire, une fois qu’ils sont instruits, ils ne doivent plus avoir la prétention de les diriger avec leur ignorance. Il faut être logique. Aujourd’hui Paris s’appartient. Il coopérera dans la mesure aux besoins de la France, en restant uni à la patrie commune, 
+et il désire que toutes les provinces de France imite son exemple, de telle sorte que cette fédération devienne une unité puissante qui paralyse à tout jamais les gouverneurs de toutes sortes, ainsi que les vieux systèmes monarchiques, impérialistes et autres. 
+Il veut que la liberté (et il n’y a pas à y revenir) soit consacrée sur la terre. [...]<br>
+
+    Je ne sais maintenant, mes chers parents, quand j’aurai le plaisir de vous revoir. Je suis obligé de faire énergiquement tout ce travail qui m’est confié, et pour lequel j’ai eu tant de propension pendant toute ma vie, moi qui étais décentralisé, en ce sens que j’étais retranché dans mon individualité pendant toute mon existence.
+Pour être dans le sens de la Commune de Paris, je n’ai pas besoin de réfléchir, je n’ai qu’à agir naturellement.<br>
+
+    La Commune de Paris a un succès que jamais aucune forme du gouvernement n’a eu. Nous venons de recevoir à l’Hôtel de Ville la délégation des francs-maçons, ils étaient 10.000, ils nous garantissent deux cent cinquante mille adhérents et combattants. On ne nous appellera plus une poignée de factieux. 
+	A Versailles, on établit le vrai désordre intentionnellement et maladroitement, en rétablissant avec les fameux députés que la province leur a envoyés et les d’Orléans et les Napoléoniens.<br>
+
+    Je vous embrasse en vous tranquillisant sur mon sort. Portez-vous tous bien et dormez sur les deux oreilles.<br>
+
+    Je n’ai pas eu de chance. J’ai perdu tout ce que j’avais eu tant de peine d’amasser, c’est-à-dire mes deux ateliers, celui d’Ornans par les Prussiens et le bâtiment de mon exposition au pont de l’Alma, que j’avais fait transporter à la Villette, qui a été employé aux barricades contre les Prussiens.<br>
+<br<br>
+    G. Courbet
+<br>
+		  Membre de la Commune de Paris </cite></span>
+<p>Lettre autographe et inédite de Gustave Courbet. Cabinet des Estampes de la Bibliothèque Nationale.</p>
+		  
+<p><i>« Attendu que la colonne Vendôme est un monument dénué de toute valeur artistique, tendant à perpétuer par son expression les idées de guerre et de conquête qui étaient dans la dynastie impériale, mais que réprouve le sentiment d’une nation républicaine, 
 		  [le citoyen Courbet] émet le vœu que le gouvernement de la Défense nationale veuille bien l’autoriser à déboulonner cette colonne.&#8239;».</i></p>
 <p>Le projet fut repris par la Commune qui le vota le 12 avril 1871.</p>
 <p><i>« La Commune de Paris, considérant que la colonne impériale de la place Vendôme est un monument de barbarie, un symbole de force brute et de fausse gloire, une affirmation du militarisme, une négation du droit international,
