--- a/plagiat_ed_corpus_commune_archives.html
+++ b/plagiat_ed_corpus_commune_archives.html
@@ -488,7 +488,7 @@ M. le Président demande à chacun d’eux ses nom, prénoms, domicile et profes
 		  élu à la Commune comme délégué à la mairie du 4 e arrondissement le 26 avril.<br><br>
 		  Dans une lettre à ses parents il parle de la Commune :</p><span>
 	
-</cite><span>
+<cite><span>
     Mes chers parents,<br>
 
     Charenton, 30 avril 1871<br>
