--- a/plagiat_ed_corpus_commune_archives.html
+++ b/plagiat_ed_corpus_commune_archives.html
@@ -488,8 +488,8 @@ M. le Président demande à chacun d’eux ses nom, prénoms, domicile et profes
 		  élu à la Commune comme délégué à la mairie du 4 e arrondissement le 26 avril.<br><br>
 		  Dans une lettre à ses parents il parle de la Commune :</p><span>
 	
-<cite><span>
-    Mes chers parents,<br>
+<p><i><span>
+    Mes chers parents,<br><br>
 
     Charenton, 30 avril 1871<br>
 
@@ -524,7 +524,7 @@ Pour être dans le sens de la Commune de Paris, je n’ai pas besoin de réfle
 <br<br>
     G. Courbet
 <br>
-		  Membre de la Commune de Paris </cite></span>
+	Membre de la Commune de Paris </i></p></span>
 <p>Lettre autographe et inédite de Gustave Courbet. Cabinet des Estampes de la Bibliothèque Nationale.</p>
 		  
 <p><i>« Attendu que la colonne Vendôme est un monument dénué de toute valeur artistique, tendant à perpétuer par son expression les idées de guerre et de conquête qui étaient dans la dynastie impériale, mais que réprouve le sentiment d’une nation républicaine, 
